[gd_scene load_steps=2 format=3 uid="uid://b0dns8at3yxvl"]

[ext_resource type="Script" path="res://script/Option/save_file.gd" id="1_6usfx"]

[node name="Save_file" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6usfx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Save1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save 1"

[node name="save2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save 2"

[node name="save3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save 3"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/save2" to="." method="_on_save_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/save3" to="." method="_on_save_3_pressed"]
