extends Control


func _on_save_1_pressed():
	get_tree().change_scene_to_file("res://scence/game/gremlin_menu.tscn")

func _on_save_2_pressed():
	get_tree().change_scene_to_file("res://scence/game/gremlin_menu.tscn")
	
func _on_save_3_pressed():
	get_tree().change_scene_to_file("res://scence/game/gremlin_menu.tscn")
